--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -2,73 +2,58 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Questionnaire Medasys</title>
 		<link rel="stylesheet" href="css/vendor.css">
 		<link rel="stylesheet" href="css/app.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="description" content="">
+		<meta name="author" content="">
 
+		<title>Bare - Start Bootstrap Template</title>
 	</head>
 
+
 	<body>
-    <ul class="nav">
-  <li class="nav-item">
-    <a class="nav-link active" href="#">Active</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled" href="#">Disabled</a>
-  </li>
-</ul>
+		<!-- Navigation -->
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+			<div class="container">
+				<a class="navbar-brand" href="#">Start Bootstrap</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarResponsive">
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item active">
+							<a class="nav-link" href="#">Home
+								<span class="sr-only">(current)</span>
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">About</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Services</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Contact</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 
-    <!--***********************************************
-    ******************* MENU **************************
-    ***************************************************-->
-
-    <div aria-hidden="true" class="navdrawer" id="navdrawerDefault" tabindex="-1">
-      <div class="navdrawer-content">
-        <div class="navdrawer-header">
-          <a class="navbar-brand px-0" href="#">Navdrawer header</a>
-        </div>
-        <nav class="navdrawer-nav">
-          <a class="nav-item nav-link active" href="#">Active</a>
-          <a class="nav-item nav-link disabled" href="#">Disabled</a>
-          <a class="nav-item nav-link" href="#">Link</a>
-        </nav>
-        <div class="navdrawer-divider"></div>
-        <p class="navdrawer-subheader">Navdrawer subheader</p>
-        <ul class="navdrawer-nav">
-          <li class="nav-item">
-            <a class="nav-link active" href="#"><i class="material-icons mr-3">alarm_on</i> Active with icon</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#"><i class="material-icons mr-3">alarm_off</i> Disabled with icon</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#"><i class="material-icons mr-3">link</i> Link with icon</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-
-
-
-    <h1 class="test">Hello world!</h1>
-
-
-    <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-
-
+		<!-- Page Content -->
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h1 class="mt-5">A Bootstrap 4 Starter Template</h1>
+					<p class="lead">Complete with pre-defined file paths and responsive navigation!</p>
+					<ul class="list-unstyled">
+						<li>Bootstrap 4.1.3</li>
+						<li>jQuery 3.3.1</li>
+					</ul>
+				</div>
+			</div>
+		</div>
     <script src="js/vendor.js"></script>
     <script src="js/app.js"></script>
 	</body>
