add filter menu

--- a/app/assets/map.html
+++ b/app/assets/map.html
@@ -53,9 +53,12 @@
 		    </form>
 		  </div>
 		</nav>
-
-		<section>
+		<div class="container-map">
+			<nav id= "nav-filter"></nav>
 			<div id="map"></div>
+		</div>
+		<section>
+
 		</section>
 		<!-- Page Content -->
 		<div class="container">
