--- a/app/assets/map.html
+++ b/app/assets/map.html
@@ -54,7 +54,13 @@
 		  </div>
 		</nav>
 		<div class="container-map">
-			<nav id= "nav-filter"></nav>
+			<nav id= "nav-filter">
+
+				<div id="marker-filter">
+					<button v-on:click="addMarkers(todo.type)" v-for="todo in todos" >{{ todo.text }}</button>
+				</div>
+
+			</nav>
 			<div id="map"></div>
 		</div>
 		<section>
@@ -67,8 +73,9 @@
 				</div>
 			</div>
 		</div>
-    <script src="js/vendor.js"></script>
-    <script src="js/app.js"></script>
+    	<script src="js/vendor.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+		<script src="js/app.js"></script>
 	</body>
 
 </html>
