--- a/app/assets/map.html
+++ b/app/assets/map.html
@@ -59,7 +59,8 @@
 				<div id="marker-filter">
 					<button v-on:click="addMarkers(todo.type)" v-for="todo in todos" >{{ todo.text }}</button>
 				</div>
-
+				
+				<button id="button-menu" type="button" name="button">click</button>
 			</nav>
 			<div id="map"></div>
 		</div>
