--- a/app/assets/map.html
+++ b/app/assets/map.html
@@ -63,9 +63,62 @@
 			</nav>
 			<div id="map"></div>
 		</div>
-		<section>
 
+		<section class="carousel slide" data-ride="carousel" id="postsCarousel">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 text-md-right lead">
+
+						<a class="btn btn-outline-secondary prev carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+							<span class="" aria-hidden="true"></span>
+							<span class="sr-only">Previous</span>
+						</a>
+						<a class="btn btn-outline-secondary next carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+							<span class="" aria-hidden="true"></span>
+							<span class="sr-only">Next</span>
+						</a>
+
+					</div>
+				</div>
+			</div>
+			<div id="articles" class="container p-t-0 m-t-2 carousel-inner">
+				<div class="row row-equal carousel-item active m-t-0">
+
+					<div class="col-md-4" v-for="item in items1" >
+						<div class="card">
+							<div class="card-img-top card-img-top-250">
+								<img class="img-fluid" v-bind:src="item.urlImage" alt="Carousel 1">
+							</div>
+							<div class="card-block p-t-2">
+								<h6 class="small text-wide p-b-2">Another</h6>
+								<h2>
+									<a v-bind:href="item.link">{{item.title}}</a>
+								</h2>
+							</div>
+						</div>
+					</div>
+
+				</div>
+				<div class="row row-equal carousel-item m-t-0">
+
+					<div class="col-md-4" v-for="item in items2" >
+						<div class="card">
+							<div class="card-img-top card-img-top-250">
+								<img class="img-fluid" v-bind:src="item.urlImage" alt="Carousel 1">
+							</div>
+							<div class="card-block p-t-2">
+								<h6 class="small text-wide p-b-2">Another</h6>
+								<h2>
+									<a v-bind:href="item.link">{{item.title}}</a>
+								</h2>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
 		</section>
+
 		<!-- Page Content -->
 		<div class="container">
 			<div class="row">
