approvement of interest points position

--- a/app/assets/map.html
+++ b/app/assets/map.html
@@ -57,7 +57,7 @@
 			<nav id= "nav-filter">
 
 				<div id="marker-filter">
-					<button v-on:click="addMarkers(todo.type)" v-for="todo in todos" >{{ todo.text }}</button>
+					<button class="btn-marker" v-on:click="addMarkers(todo.type)" v-for="todo in todos" >{{ todo.text }}</button>
 				</div>
 				<div id="slide-menu-btn">
 					<button v-on:click="changeText" id="button-menu" type="button" name="button" class="btn">{{ message }}</button>
