--- a/app/assets/map.html
+++ b/app/assets/map.html
@@ -5,7 +5,7 @@
 		<!-- Add Material font (Roboto) and Material icon as needed -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i|Roboto+Mono:300,400,700|Roboto+Slab:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+		<link rel="icon" href="img/favicon.png" type="image/png" /><!-- Favicon -->
 		<link rel="stylesheet" href="css/vendor.css">
 		<link rel="stylesheet" href="css/app.css">
 		<meta content="initial-scale=1, shrink-to-fit=no, width=device-width" name="viewport">
