adding flexbox card for carousel

--- a/app/assets/map.html
+++ b/app/assets/map.html
@@ -68,11 +68,14 @@
 			<div id="map"></div>
 		</div>
 
-		<section class="carousel slide" data-ride="carousel" id="postsCarousel">
+
+<!-- **************** CAROUSEL CARD ********************************* -->
+
+<!--		<section class="carousel slide" data-ride="carousel" id="postsCarousel">
+
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-md-right lead">
-
 						<a class="btn btn-outline-secondary prev carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
 							<span class="" aria-hidden="true"></span>
 							<span class="sr-only">Previous</span>
@@ -81,13 +84,13 @@
 							<span class="" aria-hidden="true"></span>
 							<span class="sr-only">Next</span>
 						</a>
-
 					</div>
 				</div>
 			</div>
+
+
 			<div id="articles" class="container p-t-0 m-t-2 carousel-inner">
 				<div class="row row-equal carousel-item active m-t-0">
-
 					<div class="col-md-4" v-for="item in items1" >
 						<div class="card">
 							<div class="card-img-top card-img-top-250">
@@ -101,10 +104,9 @@
 							</div>
 						</div>
 					</div>
-
 				</div>
-				<div class="row row-equal carousel-item m-t-0">
 
+				<div class="row row-equal carousel-item m-t-0">
 					<div class="col-md-4" v-for="item in items2" >
 						<div class="card">
 							<div class="card-img-top card-img-top-250">
@@ -118,10 +120,37 @@
 							</div>
 						</div>
 					</div>
-
 				</div>
 			</div>
-		</section>
+		</section> -->
+
+		<main class="cards">
+		  <article class="card">
+		    <img src="img/cards/chat1.jpg" alt="Sample photo">
+		    <div class="text">
+		      <h3>Seamlessly visualize quality</h3>
+		      <p>Collaboratively administrate empowered markets via plug-and-play networks.</p>
+		      <button>Here's why</button>
+		    </div>
+		  </article>
+		  <article class="card">
+		    <img src="img/cards/chat2.jpg" alt="Sample photo">
+		    <div class="text">
+		      <h3>Completely Synergize</h3>
+		      <p>Dramatically engage seamlessly visualize quality intellectual capital without superior collaboration and idea-sharing.</p>
+		      <button>Here's how</button>
+		    </div>
+		  </article>
+		  <article class="card">
+		    <img src="img/cards/chat3.jpg" alt="Sample photo">
+		    <div class="text">
+		      <h3>Dynamically Procrastinate</h3>
+		      <p>Completely synergize resource taxing relationships via premier niche markets.</p>
+		      <button>Read more</button>
+		    </div>
+		  </article>
+		</main>
+
 
 		<!-- Page Content -->
 		<div class="container">
