--- a/app/assets/map.html
+++ b/app/assets/map.html
@@ -58,7 +58,7 @@
 
 				<div id="marker-filter">
 					<a v-on:click="addMarkers(todo.type)" v-for="todo in todos" href="#" class="btn-marker">
-						<img class="img-marker" src="img/markers/icon-test.png" style="width:2rem;" v-bind:title="todo.text" v-bind:alt="todo.text">
+						<img class="img-marker"src="img/markers/icon-test.png" style="width:2rem;" v-bind:title="todo.text" v-bind:alt="todo.text">
 					</a>
 				</div>
 				<div id="slide-menu-btn">
@@ -75,7 +75,8 @@
 
 			<div class="container">
 				<div class="row">
-					<div class="col-xs-12 text-md-right lead">
+					<div class="col-xs-12 text-center lead">
+
 						<a class="btn btn-outline-secondary prev carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
 							<span class="" aria-hidden="true"></span>
 							<span class="sr-only">Previous</span>
@@ -124,29 +125,15 @@
 			</div>
 		</section> -->
 
-		<main class="cards">
-		  <article class="card">
-		    <img src="img/cards/chat1.jpg" alt="Sample photo">
+		<main id="articles" class="cards">
+		  <article class="card" v-for="item in items">
+		    <img v-bind:src="item.urlImage" >
 		    <div class="text">
-		      <h3>Seamlessly visualize quality</h3>
-		      <p>Collaboratively administrate empowered markets via plug-and-play networks.</p>
-		      <button>Here's why</button>
-		    </div>
-		  </article>
-		  <article class="card">
-		    <img src="img/cards/chat2.jpg" alt="Sample photo">
-		    <div class="text">
-		      <h3>Completely Synergize</h3>
-		      <p>Dramatically engage seamlessly visualize quality intellectual capital without superior collaboration and idea-sharing.</p>
-		      <button>Here's how</button>
-		    </div>
-		  </article>
-		  <article class="card">
-		    <img src="img/cards/chat3.jpg" alt="Sample photo">
-		    <div class="text">
-		      <h3>Dynamically Procrastinate</h3>
-		      <p>Completely synergize resource taxing relationships via premier niche markets.</p>
-		      <button>Read more</button>
+		      <h3>{{item.title}}</h3>
+		      <p>{{item.content}}</p>
+					<a class="button btn-block" v-bind:href="item.link">
+		      	Here's why
+					</a>
 		    </div>
 		  </article>
 		</main>
